--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-SUPABASE_URL=
-SUPABASE_KEY=
+PUBLIC_SUPABASE_URL=
+PUBLIC_SUPABASE_KEY=
+OPENROUTER_API_KEY=
+MOTIVATIONAL_MESSAGES_AI_INTEGRATION=false
