--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PUBLIC_SUPABASE_URL=
 PUBLIC_SUPABASE_KEY=
 OPENROUTER_API_KEY=
 MOTIVATIONAL_MESSAGES_AI_INTEGRATION=false
+OPENROUTER_AI_MODEL=tngtech/deepseek-r1t2-chimera:free
+OPENROUTER_AI_MODEL=tngtech/deepseek-r1t2-chimera:free
